# swagger/swagger.json
@@ -15,7 +15,7 @@
     "consumes": [],
     "produces": [],
     "paths": {
-        "/add": {
+        "/addemployeedata": {
             "post": {
                 "tags": [],
                 "description": "",
@@ -43,7 +43,7 @@
                 }
             }
         },
-        "/getdata": {
+        "/getallemployeedata": {
             "get": {
                 "tags": [],
                 "description": "",
@@ -66,7 +66,7 @@
                 ]
             }
         },
-        "/find/{employeepayrollId}": {
+        "/findemployeedata/{employeepayrollId}": {
             "get": {
                 "tags": [],
                 "description": "",
@@ -99,7 +99,7 @@
                 ]
             }
         },
-        "/update/{employeepayrollId}": {
+        "/updateemployeedata/{employeepayrollId}": {
             "put": {
                 "tags": [],
                 "description": "",
@@ -138,7 +138,7 @@
                 ]
             }
         },
-        "/delete/{employeepayrollId}": {
+        "/deleteemployeedata/{employeepayrollId}": {
             "delete": {
                 "tags": [],
                 "description": "",
